[tool.poetry]
name = "yaplox"
version = "0.0.3"
description = "YaPlox - Yet Another Python implementation for Lox"
authors = ["Roel Adriaans <roel@adriaans.org>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
structlog = "^20.1.0"
colorama = "^0.4.3"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.18.0"
pytest-coverage = "^0.0"
pytest-mock = "^3.2.0"
lxml = "^4.5.2"
pre-commit = "^2.6.0"


[tool.poetry.scripts]
yaplox = "yaplox.yaplox:Yaplox.main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
