[tool.poetry]
name = "yaplox"
version = "0.0.3"
description = "YaPlox - Yet Another Python implementation for Lox"
authors = ["Roel Adriaans <roel@adriaans.org>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
structlog = "^20.1.0"
colorama = "^0.4.3"
classyconf = "^0.3.0"


[tool.poetry.dev-dependencies]
pytest = "^6.1"
tox = "^3.20.0"
pytest-coverage = "^0.0"
pytest-mock = "^3.3.1"
lxml = "^4.5.2"
pre-commit = "^2.7.1"
black = "^20.8b1"
isort = "^5.6.1"


[tool.poetry.scripts]
yaplox = "yaplox.yaplox:Yaplox.main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
