[tool.poetry]
name = "yaplox"
version = "0.0.8"
description = "YaPlox - Yet Another Python implementation for Lox"
authors = ["Roel Adriaans <roel@adriaans.org>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
structlog = "^20.2.0"
colorama = "^0.4.4"
classyconf = "^0.4.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
tox = "^3.21.4"
pytest-coverage = "^0.0"
pytest-mock = "^3.5.1"
lxml = "^4.6.2"
pre-commit = "^2.11.0"
black = "^20.8b1"
isort = "^5.7.0"


[tool.poetry.scripts]
yaplox = "yaplox.yaplox:Yaplox.main"


[build-system]
requires = ["poetry>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = [ "src/yaplox/__version__.py"]
